SigmaCodebackup3rdSep/objects/Stock_Receiving_Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Buying_Price__c</fullName>
        <label>Avg Buying Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>Lot__r.Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Serial Number</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Receiving_Product__c</fullName>
        <label>Stock Receiving Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipLabel>Stock Receiving Product Line Items</relationshipLabel>
        <relationshipName>Stock_Receiving_Product_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Buying_Price__c</fullName>
        <label>Total Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stock Receiving Product Line Item</label>
    <nameField>
        <displayFormat>SRPLI-{0000}</displayFormat>
        <label>Stock Receiving Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Receiving Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>